--- a/Crawl/Crawl/Views/MainPage.xaml
+++ b/Crawl/Crawl/Views/MainPage.xaml
@@ -4,37 +4,28 @@
             xmlns:views="clr-namespace:Crawl.Views"
             x:Class="Crawl.Views.MainPage">
     <TabbedPage.Children>
-        <NavigationPage Title="Home">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:OpeningPage />
-            </x:Arguments>
-        </NavigationPage>
 
-        <NavigationPage Title="Manage">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ManagePage />
-            </x:Arguments>
-        </NavigationPage>
+		<NavigationPage Title="About">
+			<NavigationPage.Icon>
+				<OnPlatform x:TypeArguments="FileImageSource">
+					<On Platform="iOS" Value="tab_about.png"/>
+				</OnPlatform>
+			</NavigationPage.Icon>
+			<x:Arguments>
+				<views:AboutPage />
+			</x:Arguments>
+		</NavigationPage>
+		
+		<NavigationPage Title="Menu">
+			<NavigationPage.Icon>
+				<OnPlatform x:TypeArguments="FileImageSource">
+					<On Platform="iOS" Value="tab_feed.png"/>
+				</OnPlatform>
+			</NavigationPage.Icon>
+			<x:Arguments>
+				<views:MenuPage />
+			</x:Arguments>
+		</NavigationPage>
 
-        <NavigationPage Title="About">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>
-    </TabbedPage.Children>
+	</TabbedPage.Children>
 </TabbedPage>
