--- a/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
@@ -5,11 +5,103 @@
              Title="{Binding Title}">
 
 
-    <ContentPage.ToolbarItems>
+	<ContentPage.ToolbarItems>
+		<ToolbarItem Text="Edit" Clicked="Edit_Clicked" />
+		<ToolbarItem Text="Delete" Clicked="Delete_Clicked" />
+		<ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
+	</ContentPage.ToolbarItems>
 
-    </ContentPage.ToolbarItems>
+	<ScrollView>
+		<StackLayout 
+            x:Name="DetailsRoot"
+            Orientation="Vertical"
+            Spacing="20"
+            Padding="15">
 
-    <StackLayout Spacing="20" Padding="15">
+			<Label Text="Items Detail Page" FontSize="Medium" />
 
-    </StackLayout>
+			<Image Source="{Binding Data.ImageURI}"
+                WidthRequest="150"
+                HeightRequest="150" 
+                HorizontalOptions="Center"
+                VerticalOptions="Center"/>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Name : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Name}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Description : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Description}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Range : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Range}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Damage : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Damage}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Value : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Value}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout
+                Orientation="Horizontal"
+                HorizontalOptions="Start">
+				<Label Text="Location : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Location}" 
+                    FontSize="Medium" 
+                    HorizontalOptions="Center"/>
+			</StackLayout>
+
+			<StackLayout 
+                Orientation="Horizontal" 
+                HorizontalOptions="Start">
+				<Label Text="Attribute : " 
+                   FontSize="Medium" 
+                   HorizontalOptions="Start"/>
+				<Label Text="{Binding Data.Attribute}" 
+                   FontSize="Medium" 
+                   HorizontalOptions="Center"/>
+			</StackLayout>
+		</StackLayout>
+	</ScrollView>
 </ContentPage>
