--- a/Crawl/Crawl/Views/Characters/CharactersPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharactersPage.xaml
@@ -3,16 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.CharactersPage"
               Title="{Binding Title}"
-             x:Name="BrowseItemsPage">
+             x:Name="BrowseCharactersPage">
 	<ContentPage.ToolbarItems>
-		<ToolbarItem Text="Add" Clicked="AddItem_Clicked" />
+		<ToolbarItem Text="Add" Clicked="AddCharacter_Clicked" />
 	</ContentPage.ToolbarItems>
+
 	<ContentPage.Content>
 		<StackLayout>
 
-			<Label Text="Items List Page" FontSize="Small" />
+			<Label Text="Character List Page" FontSize="Small" />
 
-			<ListView x:Name="ItemsListView" 
+			<ListView x:Name="CharactersListView" 
                 ItemsSource="{Binding Dataset}"
                 VerticalOptions="FillAndExpand"
                  HasUnevenRows="true"
@@ -43,19 +44,11 @@
                                            LineBreakMode="NoWrap" 
                                            Style="{DynamicResource ListItemTextStyle}" 
                                            FontSize="16" />
-										<Label Text="{Binding Attribute}" 
-                                           LineBreakMode="NoWrap" 
-                                           Style="{DynamicResource ListItemTextStyle}" 
-                                           FontSize="16" />
-										<Label Text="{Binding Value}" 
+										<Label Text="{Binding Age}" 
                                            LineBreakMode="NoWrap" 
                                            Style="{DynamicResource ListItemTextStyle}" 
                                            FontSize="16" />
 									</StackLayout>
-									<Label Text="{Binding Description}" 
-                                       LineBreakMode="NoWrap"
-                                       Style="{DynamicResource ListItemDetailTextStyle}"
-                                       FontSize="13" />
 								</StackLayout>
 
 							</StackLayout>
